--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -77,8 +77,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'estimate_transactions' %}active{% endif %}"
-               href="{% url 'estimate_transactions' %}">
+            <a class="nav-link {% if request.resolver_match.url_name == 'estimate_transaction' %}active{% endif %}"
+               href="{% url 'estimate_transaction' %}">
               <i class="bi bi-calculator me-1"></i> Estimate Transactions
             </a>
           </li>
